<resources>
    <string name="app_name">Aled iluminacion</string>
    <string name="bienvenida">Bienvenido!!!</string>
    <string name="login">Login</string>
    <string name="usuario">Ingresa usuario</string>
    <string name="contrasena">Ingresa contraseña</string>
    <string name="recordar">Recordar sesión</string>
    <string name="ingresar">Ingresar</string>
    <string name="acercaDe">Acerca de</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="penditenes">Pendientes</string>
    <string name="regresar">Regresar</string>
    <string name="hola">Hola</string>
    <string name="administradores">Administradores</string>
    <string name="vendedores">Vendedores</string>
    <string name="ventasMes">Ventas del Mes</string>
    <string name="productos">Productos</string>
    <string name="ventas">Ventas</string>
    <string name="clientes">Clientes</string>
    <string name="direcciones">Direcciones</string>
    <string name="telefonos">Telefonos</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="actualizar">Actualizar</string>
    <string name="lista">Lista de</string>
    <string name="nombre">Ingresa nombre</string>
    <string name="calle">Ingresa calle</string>
    <string name="numero">Ingresa numero</string>
    <string name="colonia">Ingresa colonia</string>
    <string name="estado">Estado</string>
    <string name="rfc">Ingrese RFC</string>
    <string name="correo">Ingrese Correo</string>
    <string name="codigo">Ingresa Codigo</string>
    <string name="descripcion">Ingrese descripción</string>
    <string name="precio">Ingrese precio</string>
    <string name="credito">Credito</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="diasCredito">Dias de credito</string>
    <string name="fecha">Ingrese Fecha</string>
    <string name="monto">monto</string>
    <string name="municipio">Ingrese municipio</string>
    <string name="total">Total</string>
    <string name="cantidad">Cantidad de Productos</string>
    <string name="anadir">anadir</string>
    <string name="empty"></string>
    <string name="id">Ingresa id de la venta a pagar</string>
    <string name="pagar">Marcar como pagado</string>
    <string name="nameZ">Zuriel Alejandro Landeros Mora</string>
    <string name="nameE">Enrique Angel Avila Nicasio</string>
    <string name="nameL">Luis Alfonso Pérez Bayardo</string>
    <string name="acerca">Apliacacion enfocada en las ventas de la empresa Aled iluminacion haciendo uso de el gestor de bases de datos MySQL
    </string>
</resources>
