<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eaan.ppdm4p.aled.GestionClientesActivity">

    <TextView
        android:id="@+id/txtTituloClientes"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/clientes"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty"
        android:background="@android:color/holo_blue_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/clientes"
                app:srcCompat="@drawable/clientes" />

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/telefonos"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/calle"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/numero"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtColonia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/colonia"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/municipio"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spEstados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></Spinner>

            <LinearLayout
                android:id="@+id/linBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageButton
                    android:id="@+id/btnAgregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/agregar"
                    android:onClick="insertarCliente"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <ImageButton
                    android:id="@+id/btnBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/buscar"
                    android:onClick="buscarCliente"
                    app:srcCompat="@android:drawable/ic_menu_search" />

                <ImageButton
                    android:id="@+id/btnActualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/actualizar"
                    android:onClick="actualizarCliente"
                    app:srcCompat="@android:drawable/ic_menu_upload" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/lista"
                    android:onClick="listarClientes"
                    app:srcCompat="?android:attr/actionModePasteDrawable" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
