<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eaan.ppdm4p.aled.GestionVentasActivity">

    <TextView
        android:id="@+id/txtTituloVendedores"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/ventas"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txtEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty"
        android:background="@android:color/holo_blue_light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/ventas"
                app:srcCompat="@drawable/ventas" />

            <Spinner
                android:id="@+id/spProductos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></Spinner>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/cantidad"
                    android:inputType="number" />

                <ImageButton
                    android:id="@+id/imbCarrito"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/white"
                    android:contentDescription="@string/anadir"
                    android:onClick="anadirCarrito"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/carrito" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtCredito"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/credito"
                android:textAlignment="textStart"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rgCredito"
                android:layout_width="206dp"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbSi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/si" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.08"
                    android:text="@string/no" />

            </RadioGroup>

            <EditText
                android:id="@+id/txtDiasCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/diasCredito"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtMonto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/monto"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/total"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fecha"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtVendedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/vendedores"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spClientes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></Spinner>

            <LinearLayout
                android:id="@+id/linBotones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp">

                <ImageButton
                    android:id="@+id/btnAgregar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/agregar"
                    android:onClick="insertarVenta"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/lista"
                    android:onClick="listarVentas"
                    app:srcCompat="?android:attr/actionModePasteDrawable" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
